--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ setInterval(updateGradient,10);
   
 <body>
 
-<div class="container-fluid gradient">
+<div class="gradient container-fluid">
   <div class="row justify-content-center align-items-center">
     <div class="col-8">
       Global Game Jam Palermo 2020
