--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ setInterval(updateGradient,10);
 
 <div class="gradient container-fluid">
   <div class="row justify-content-center align-items-center">
-    <div class="col-8">
+    <div class="col-10 col-md-8" align="center">
       Global Game Jam Palermo 2020
     </div>
   </div>
