--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ setInterval(updateGradient,10);
 <body>
 
 <div class="gradient container-fluid">
-  <div class="row justify-content-center align-items-center">
+  <div style="height:100%;" class="row justify-content-center align-items-center">
     <div class="col-10 col-md-8" align="center">
       Global Game Jam Palermo 2020
     </div>
