--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Global Game Jam 2020 Palermo</title>
   <link rel="stylesheet" type="text/css" href="https://github.com/globalgamejampalermo/2020/blob/master/styles.css">
+  <link rel="stylesheet" type="text/css" href="/Users/vincenzomadonia/Documents/GitHub/2020/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,600,600i,700,700i&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   </head>
 
 <script>
@@ -76,13 +78,24 @@ setInterval(updateGradient,10);
 <body>
 
 <div class="gradient container-fluid">
-  <div style="height:100%;" class="row justify-content-center align-items-center">
+  <div style="height:100vh !important;" class="row justify-content-center align-items-center">
     <div class="col-10 col-md-8" align="center">
       Global Game Jam Palermo 2020
     </div>
   </div>
 </div>
-  
+
+<div class=" container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-10 col-md-8">
+      <h1>FAQ</h1>
+       <div class="row">
+        <div class="col-6 magenta">Cos'è la Global Game Jam®?</div>
+        <div class="col-6">E' un'occasione unica per riunire persone con la stessa passione cosÃ¬ da accettare la sfida al massimo delle proprie capacitÃ . Noi forniamo un tema principale ed i partecipanti hanno 48 ore per creare un gioco. La nostra speranza sarebbe vedere dei prototipi di gioco crescere anche dopo la Global Game Jam. In passato, infatti, molti titoli sono stati pienamente realizzati dopo la Jam. Tutti i progetti sono protetti da una licenza Creative Commons. Incoraggiamo le persone a mettere in gioco le loro idee e tutto sÃ¨ stessi. Ovviamente chiediamo ai partecipanti di non dimenticarsi di mangiare e dormire, cosÃ¬ da stare al meglio!</div>
+  	  </div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
