--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ setInterval(updateGradient,10);
     <div class="col-10 col-md-8">
       <h1>FAQ</h1>
        <div class="row">
-        <div class="col-6 magenta">Cos'è la Global Game Jam®?</div>
+        <div class="col-6 magentaline">Cos'è la Global Game Jam®?</div>
         <div class="col-6">E' un'occasione unica per riunire persone con la stessa passione cosÃ¬ da accettare la sfida al massimo delle proprie capacitÃ . Noi forniamo un tema principale ed i partecipanti hanno 48 ore per creare un gioco. La nostra speranza sarebbe vedere dei prototipi di gioco crescere anche dopo la Global Game Jam. In passato, infatti, molti titoli sono stati pienamente realizzati dopo la Jam. Tutti i progetti sono protetti da una licenza Creative Commons. Incoraggiamo le persone a mettere in gioco le loro idee e tutto sÃ¨ stessi. Ovviamente chiediamo ai partecipanti di non dimenticarsi di mangiare e dormire, cosÃ¬ da stare al meglio!</div>
   	  </div>
     </div>
