--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
   padding:0px;
 }
 
-html{
-    min-height: 100% !important;
-    height: 100% !important;
-}
+
 .nogutters {
   margin-right: 0 !important;
   margin-left: 0 !important;
@@ -84,13 +81,16 @@ html{
 .txt04{font-size: 18pt; font-weight: 900;}
 
 @media only screen and (max-width: 768px) {
-.txt00{font-size: 42pt; font-weight: 900;}
-.txt01{font-size: 32pt; font-weight: 900;}
-.txt02{font-size: 25pt; font-weight: 900;}
-.txt03{font-size: 18pt; font-weight: 900;}
+.txt00{font-size: 32pt; font-weight: 900;}
+.txt01{font-size: 25pt; font-weight: 900;}
+.txt02{font-size: 18pt; font-weight: 900;}
+.txt03{font-size: 12pt; font-weight: 900;}
 .txt04{font-size: 12pt; font-weight: 900;}
 
 }
+
+.containerpadd{padding-top:10%;padding-bottom:10%;}
+.magentabg{background-color:#E3007A;}
 
 .buttonggj{color:#E3007A !important;background-color:#fff !important;}
 
@@ -256,8 +256,8 @@ setInterval(updateGradient,10);
   </div>
 </div>
 
-<div class="monitor container-fluid">
-  <div style="height:100% !important;" class="row justify-content-center align-items-center">
+<div class="container-fluid">
+  <div class="row containerpadd justify-content-center">
     <div class="col-10 col-md-8">
 		<div class="row">
 		<div class="col-12 col-md-6">
@@ -272,10 +272,10 @@ setInterval(updateGradient,10);
   </div>
 </div>
 
-<div class="monitormagenta container-fluid">
-  <div style="height:100% !important;" class="row justify-content-center align-items-center">
+<div class="container-fluid magentabg txtwhite">
+  <div class="row containerpadd justify-content-center">
     <div class="col-10 col-md-8">
-		<h1 class="txt00 txtwhite">PARTECIPA</h1>
+		<h1 class="txt00">PARTECIPA</h1>
 		<div class="row mgtop5">
 		<div class="col-12 col-md-6">
 		<a href=""><h1 class="txt03 txtwhite">> JAMMER</h1></a><br>
