--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@ setInterval(updateGradient,10);
 
 <div class="gradient container-fluid">
   <div style="height:100% !important;" class="row justify-content-center align-items-center">
-    <div class="col-10 col-md-8" align="center">
+    <div class="col-sm-10 col-md-8" align="center">
       <img style="width:80%" class="img-fluid jello-horizontal" src="https://raw.githubusercontent.com/globalgamejampalermo/2020/master/images/ggjlogoW.png">
       <div class="row mgtop10 justify-content-center align-items-end">
-    <div class="col-12 col-md-6" align="center">
+    <div class="col-md-6" align="center">
       <a href=""><h1 class="txt02 txtwhite">Partecipa</h1></a>
     </div>
-    <div class="col-12 col-md-6" align="center">
+    <div class="col-md-6" align="center">
       <a href=""><h1 class="txt02 txtwhite">Scopri</h1></a>
     </div>
   </div>
@@ -258,14 +258,14 @@ setInterval(updateGradient,10);
 
 <div class="container-fluid">
   <div class="row containerpadd justify-content-center">
-    <div class="col-10 col-md-8">
+    <div class="col-md-8">
 		<div class="row">
-		<div class="col-12 col-md-6">
+		<div class="col-md-6">
 		La Global Game Jam® è un evento annuale sullo sviluppo di videogiochi realizzato in contemporanea mondiale presso centinaia di sedi accreditate. È la più grande game jam al mondo dove appassionati neofiti sullo sviluppo di videogiochi collabboreranno per realizzare un gioco o videogioco in 48 ore. Quest'anno per la terza volta sarà anche a Palermo.
 		<br><br>
 		Realizza un videogioco o un gioco da tavolo o di carte in 48 ore insieme ad altri appassionati come te. Che tu sia un programmatore, graphic artist, disegnatore, game designer, o semplicemente ti piacciono i giochi e vuoi metterti alla prova, vieni alla Global Game Jam® insieme ad altri ragazzi e ragazze creare il gioco dei tuoi sogni, scoprendo nuove abilità e amicizie. La Global Game Jam® è innovazione, sperimentazione e collaborazione.
 		</div>
-		<div class="col-12 col-md-6">
+		<div class="col-md-6">
 		</div>
 	</div>
     </div>
