--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@ setInterval(updateGradient,10);
 
 <div class="gradient container-fluid">
   <div style="height:100% !important;" class="row justify-content-center align-items-center">
-    <div class="d-flex col-sm-10 col-md-8" align="center">
+    <div class="col-sm-10 col-md-8" align="center">
       <img style="width:80%" class="img-fluid jello-horizontal" src="https://raw.githubusercontent.com/globalgamejampalermo/2020/master/images/ggjlogoW.png">
       <div class="row mgtop10 justify-content-center align-items-end">
-    <div class="d-flex col-md-6" align="center">
+    <div class="col-md-6" align="center">
       <a href=""><h1 class="txt02 txtwhite">Partecipa</h1></a>
     </div>
-    <div class="d-flex col-md-6" align="center">
+    <div class="col-md-6" align="center">
       <a href=""><h1 class="txt02 txtwhite">Scopri</h1></a>
     </div>
   </div>
