--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 .txt04{font-size: 12pt; font-weight: 900;}
 
 }
+	
+.row{ display: -webkit-box !important; display: -webkit-flex !important; display: -ms-flexbox !important; display: flex; -webkit-flex-wrap: wrap !important; -ms-flex-wrap: wrap !important; flex-wrap: wrap !important; }
 
 .containerpadd{padding-top:10%;padding-bottom:10%;}
 .magentabg{background-color:#E3007A;}
