--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>Global Game Jam 2020 Palermo</title>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,600,600i,700,700i&display=swap" rel="stylesheet">
  
