--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ setInterval(updateGradient,10);
 <div class="monitor container-fluid mgtop5">
   <div style="height:100% !important;" class="row justify-content-center align-items-center">
     <div style="height:100% !important;" class="col-12">
-    <h1 style="position:absolute;left:10%;top:5%; line-height: 90%;" class="txt00 mgtop10">DOVE TROVARE<br>LA JAM</h1>	
+    <h1 style="position:absolute;left:10%;top:5%; line-height: 90%;" class="txt00 mgtop10">DOVE<br>TROVARE<br>LA JAM</h1>	
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3138.908280128922!2d13.33533231515806!3d38.11906817969818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1319ef6a3cb8b52b%3A0x39596daba6ab4dd2!2sCre.Zi.%20Plus!5e0!3m2!1sit!2sit!4v1576723798017!5m2!1sit!2sit" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
   </div>
