--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ setInterval(updateGradient,10);
 Procedendo acconsentirai a prenotare un posto per la Global Game Jam di Palermo. Ti ricordiamo che l'evento e gratuito e di prenotare il biglietto alla jam solo se interessato a partecipare attivamente come Jammer. Se vuoi solo fare da spettatore ti consigliamo di venirci a trovare durante i talk senza aver bisogno di prenotare.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn buttonmagenta">Prenota su Eventbrite</button>
+        <a target="_blank" role="button" href="https://www.eventbrite.it/e/global-game-jam-palermo-2020-tickets-87875448833?fbclid=IwAR15Hwj7ojlWLSkETWafj0B01S0RUlTTES_pagWSp2HuuUrJrf5VPjkuQzs" type="button" class="btn">Prenota su Eventbrite</a>
       </div>
     </div>
   </div>
@@ -351,7 +351,7 @@ Per assistere ad i vari talk che si svolgeranno durante la Global Game Jam non a
         		<i>Vincenzo Madonia</i><br><br>
         		<b>15.30</b><br>
         		<b class="txtmagenta">TALK</b> - Come sopravvivere ad una Jam<br>
-        		<i>Claudio Bozzotta & Francesco Corselli</i><br><br>
+        		<i>Claudio Bozzotta & Francesco Corsello</i><br><br>
         		<b>16.00</b><br>
         		Annuncio tema e inizio Jam<br><br>
         		<b>17.00</b><br>
