--- a/index.html
+++ b/index.html
@@ -460,8 +460,33 @@ Per assistere ad i vari talk che si svolgeranno durante la Global Game Jam non a
 
 <div class="monitor container-fluid mgtop10 txtwhite" style="background-color:#222;">
   <div style="height:100% !important;" class="row justify-content-center align-items-center">
-    <div class="col-12">
-    
+    <div class="col-10">
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <a href="https://globalgamejam.org"><img class="img-fluid" src="https://raw.githubusercontent.com/globalgamejampalermo/2020/master/images/ggjlogoW.png"></a>
+      </div>
+      <div class="col-12 col-md-6">
+        <b>Sito Ufficiale</b><br>
+        <a class="txtmagenta" href="https://globalgamejam.org">Global Game Jam 2020</a><br><br>
+
+        <b>E-Mail</b><br>
+        globalgamejampalermo@gmail.com<br><br>
+
+        <b>Organizzatori</b><br>
+        Claudio Bozzotta<br>
+        Francesco Corsello<br>
+        Vincenzo Madonia<br><br>
+
+        <b>In collaborazione con</b><br>
+        <a class="txtmagenta" href="https://www.creziplus.it">CreZiPlus</a><br><br>
+
+        Evento patrocinato dal Comune di Palermo<br>
+        <img width="10%" src="https://github.com/globalgamejampalermo/2020/blob/master/images/comune_pa_fondorosso.jpg?raw=true">
+
+
+
+      </div>
+    </div>
     </div>
   </div>
 </div>
